--- a/Frontend/Meetups.Frontend.BlazorUI/wwwroot/index.html
+++ b/Frontend/Meetups.Frontend.BlazorUI/wwwroot/index.html
@@ -7,7 +7,9 @@
     <title>Meetups</title>
     <base href="/" />
     <link rel="icon" type="image/png" href="icon-192.png" />
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="global.css" rel="stylesheet" />
     <link href="Meetups.Frontend.BlazorUI.styles.css" rel="stylesheet" />
 </head>
 
@@ -20,7 +22,9 @@
             <a href="" class="reload">Reload</a>
         </div>
     </div>
+    
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
